--- a/static/css/style.css
+++ b/static/css/style.css
@@ -398,6 +398,30 @@ nav {
     margin-bottom: 1.5rem;
 }
 
+.form-message {
+    padding: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 4px;
+    text-align: center;
+}
+
+.form-message.success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+.form-message.error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
+
+.submit-btn:disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
+}
+
 .checkbox-group {
     display: flex;
     align-items: flex-start;
